<resources>
    <string name="app_name">TravelApp</string>
    <string name="btn_olvide_pass">OLvide mi contraseña</string>
    <string name="img_btn">img_botom</string>
    <string name="logo">img_logo</string>
    <string name="txt_email">Gmail</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_repetir_password">Repetir contraseña</string>
    <string name="ingresar_email">ingresar email</string>
    <string name="btn_ing">Ingresar</string>
    <string name="btn_reg">Registrarse</string>
    <string name="txt_numero">Celular</string>
    <string name="btn_atras">Atras</string>
    <string name="btn_enviar">Enviar</string>
    <string name="userName">Usuario</string>
    <string name="items">items-image</string>
    <string name="nombre_app">TravelApp</string>
    <string name="bievenida_app">Bienvenido</string>
    <string name="img_perfil">foto_perfil</string>
    <string name="user">Nombre de usuario</string>
    <string name="info_email">Informacion email</string>
    <string name="info_cel">Info telefono</string>
    <string name="nueva_pass">Nueva contraseña</string>
    <string name="colombia">Colombia</string>
    <string name="activo">Activo</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="actualizar_info">Actualizar informacion</string>
    <string name="galeria">Elegir Imagen</string>
    <string name="cambiar_foto">Cambiar Imagen de Perfil</string>
    <string name="nombre_de_user">Nombre de usuario</string>
    <string name="informacion_user">Actualizar informacion</string>
    <string name="NUMERO">Numero de telefono</string>
    <string name="Nacionalidad">Nacionalidad</string>

    <string name="invalid_gmail">Ingrese gmail valido</string>
    <string name="invalid_password">Ingrese contraseña mayor a 6 digitos</string>

    <string name="indicador_ubicacion">Departamento :</string>
    <string name="indicador_recomendacio">Recomendaciones :</string>
    <string name="indicador_clima">Clima promedio :</string>
    <string name="title_activity_maps">Map</string>

    <string name="btn_maps">Abrir ubicacion</string>


</resources>