<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    tools:context=".Registro">

    <LinearLayout
        android:id="@+id/linearLa_registro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginTop="10sp"
            android:contentDescription="@string/logo"
            app:srcCompat="@mipmap/logo_001" />

        <EditText
            android:id="@+id/et_user_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:ems="10"
            android:hint="@string/userName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_gmail_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="20sp"
            android:ems="10"
            android:hint="@string/txt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_telefono_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="15sp"
            android:ems="10"
            android:hint="@string/txt_numero"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_contraseña_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="15sp"
            android:ems="10"
            android:hint="@string/txt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_r_password_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="15sp"
            android:ems="10"
            android:hint="@string/txt_repetir_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_registrarse_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/bordes_redondos"
            android:fontFamily="monospace"
            android:text="@string/btn_reg"
            android:textColor="#100F0F"
            android:textSize="18sp"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_atras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:background="@drawable/bordes_redondos"
            android:fontFamily="monospace"
            android:text="@string/btn_atras"
            android:textColor="#0B0A0A"
            android:textSize="18sp"
            tools:targetApi="lollipop" />


    </LinearLayout>


</RelativeLayout>