<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    tools:context=".RecuperarContr">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="201dp"
        android:layout_height="149dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549"
        app:srcCompat="@mipmap/logo_002"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="260dp"
        android:layout_height="57dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_atras_recuperar_c"
        android:layout_width="134dp"
        android:layout_height="33dp"
        android:layout_marginBottom="204dp"
        android:background="#DD62646A"
        android:backgroundTint="#68B4F1"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/btn_atras"
        android:textColor="#000000"
        android:textColorHighlight="#0DB8CD"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/button"
        android:layout_width="134dp"
        android:layout_height="33dp"
        android:layout_marginBottom="20dp"
        android:background="#DD62646A"
        android:backgroundTint="#68B4F1"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/btn_enviar"
        android:textColor="#000000"
        android:textColorHighlight="#0DB8CD"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_atras_recuperar_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>