<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">


    <LinearLayout
        android:id="@+id/linearlayout_botones"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btn_home2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:contentDescription="@string/img_btn"
            android:elevation="6dp"
            android:src="@mipmap/btn_home01"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/btn_fav2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="2.5sp"
            android:layout_marginRight="2.5sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:contentDescription="@string/img_btn"
            android:elevation="6dp"
            android:src="@mipmap/btn_fav01"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/btn_perfil2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2.5sp"
            android:layout_marginLeft="2.5sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:background="@color/micolor"
            android:contentDescription="@string/img_btn"
            android:elevation="6dp"
            android:src="@mipmap/btn_perfil01"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/btn_conf2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:contentDescription="@string/img_btn"
            android:elevation="6dp"
            android:src="@mipmap/btn_conf01"
            tools:targetApi="lollipop" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="65dp"
        android:gravity="center_vertical"
        >

        <LinearLayout
            android:id="@+id/linear_latout_perfil_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/uploadImageVp"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="2"
                android:contentDescription="@string/img_perfil"
                app:srcCompat="@mipmap/foto_perfil" />

            <TextView
                android:id="@+id/tv_nombre_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:layout_weight="1"
                android:text="@string/user"
                android:layout_marginBottom="15sp"
                android:textSize="24sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lenar_layout_info_perfil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="8sp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="70sp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:contentDescription="@string/activo"
                    android:src="@mipmap/ico3" />

                <TextView
                    android:id="@+id/tv_gmail_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_email"
                    android:textSize="20sp"
                    android:layout_marginTop="25sp"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:orientation="horizontal"
                android:layout_marginTop="10sp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:contentDescription="@string/activo"
                    android:src="@mipmap/ico1" />

                <TextView
                    android:id="@+id/tv_celular_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_cel"
                    android:layout_marginTop="25sp"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:orientation="horizontal"
                android:layout_marginTop="10sp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:contentDescription="@string/activo"
                    android:src="@mipmap/ico2" />


                <EditText
                    android:id="@+id/editTextTextPassword4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_marginRight="40sp"
                    android:hint="@string/nueva_pass"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:orientation="horizontal"
                android:layout_marginTop="10sp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:contentDescription="@string/activo"
                    android:src="@mipmap/ico2" />

                <EditText
                    android:id="@+id/editTextTextPassword5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_repetir_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:layout_marginRight="40sp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1"
                    />

            </LinearLayout>


            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="50sp"
                android:background="@drawable/bordes_redondos"
                android:fontFamily="monospace"
                android:text="@string/btn_enviar"
                android:textColor="#F8F2F2"
                android:textSize="18sp"
                tools:targetApi="lollipop" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>